Add method for getting origin filename of uploaded image
